# conways-fight-for-survival

./: .gitignore  LICENSE  PROPOSAL.md  README.md  cabal.config  conways-fight-for-survival.cabal  stack.yaml
rainbow-0.30.0.2/tests/: rainbow-instances.hs  test256color.hs  test8color.hs
savedStates/: glider.txt  r_pentomino.txt
src/: Array.hs  CellArray.hs  Lib.hs  Main.hs  QuadTreeV2.hs  Quadtree.hs  StringOfLife.hs
src/rainbow-0.30.0.2/: LICENSE  README.md
src/rainbow-0.30.0.2/lib/: Rainbow.hs
src/rainbow-0.30.0.2/lib/Rainbow/: Translate.hs  Types.hs
src/rainbow-0.30.0.2/tests/: colorTest.hs
src/rainbow-0.30.0.2/tests/Rainbow/: QuickCheck.hs
