name:                conways-fight-for-survival
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wolf-tickets/conways-fight-for-survival#readme
license:             GPL-3
license-file:        LICENSE
author:              Al Smith, Tristan MacKinlay, Rob Willoughby
maintainer:          alexgwsmith@gmail.com
copyright:           Copyright (c) 2018 Al Smith, Tristan MacKinlay, Rob Willoughby (GNU GPLv3)
category:            Haskell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable conways-fight-for-survival
  hs-source-dirs:      src
  other-modules:       Lib
                     , Quadtree
  build-depends:       base >= 4.7 && < 5
  main-is:             Main.hs
  default-language:    Haskell2010